Switch to S3 for file uploads

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
 DATABASE_URL=postgresql://postgres@localhost:5432/postgres
+
+S3_PUBLIC_URL=https://pub-something.r2.dev
+S3_API_URL=https://something.r2.cloudflarestorage.com
+S3_BUCKET_NAME=construct
+
 APP_SECRET_KEY=changeme
+
 SLACK_BOT_TOKEN=changeme
 SLACK_TEAM=T0266FRGM
+
 IDV_DOMAIN=account.hackclub.com
 IDV_CLIENT_ID=changeme
 IDV_CLIENT_SECRET=changeme
