--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
-		"drizzle-kit": "^0.31.7",
+		"@aws-sdk/client-s3": "^3.940.0",
 		"@lucide/svelte": "^0.547.0",
 		"@prgm/sveltekit-progress-bar": "^3.0.2",
 		"cron": "^4.3.4",
+		"drizzle-kit": "^0.31.7",
 		"drizzle-orm": "^0.44.7",
 		"express": "^5.1.0",
 		"pg": "^8.16.3",
