--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ APP_SECRET_KEY=changeme
 SLACK_BOT_TOKEN=changeme
 SLACK_TEAM=T0266FRGM
 
+SUPER_ADMIN_SLACK_ID=changeme
+
 IDV_DOMAIN=account.hackclub.com
 IDV_CLIENT_ID=changeme
 IDV_CLIENT_SECRET=changeme
