Add source commit

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 # POSTGRES_PASSWORD=password
 # DATABASE_URL=postgresql://postgres:password@db:5432/postgres
 # PUBLIC_ENV=production # or staging
+# PUBLIC_COMMIT=$SOURCE_COMMIT
 
 PUBLIC_ENV=dev
 
