Add license validation for Printables models

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,5 @@ IDV_CLIENT_SECRET=changeme
 SENTRY_AUTH_TOKEN=changeme
 
 # AIRTABLE_TOKEN=abcxyz # optional
+
+PRINTABLES_ALLOWED_LICENSES_ID=1,2,3 # License IDs from printables
